fix crash trying to clone a xf view w/o a search session, r=neil, bug 557129